--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <li class="work-page-grid-item">
           <a href="project-1.html">
             <figure>
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316293/pawel-czerwinski.jpg" alt="Describe your project">
+              <img src="hand code thumbnails4.jpg" alt="Describe your project">
             </figure>
           </a>
         </li>
