--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
         <li class="work-page-grid-item">
           <a href="project-1.html">
           <figure>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316293/computer.jpg" alt="Describe your project">
+            <img src="hand code thumbnails6.jpg" alt="Describe your project">
           </figure>
         </a>
         </li>
         <li class="work-page-grid-item"><a href="project-1.html">
           <figure>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316293/white-paper.jpg" alt="Describe your project">
+            <img src="hand code thumbnails.jpg" alt="Describe your project">
           </figure>
         </a>
         </li>
         <li class="work-page-grid-item"><a href="project-1.html">
           <figure>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316293/phone.jpg" alt="Describe your project">
+            <img src="hand code thumbnails2.jpg" alt="Describe your project">
           </figure>
         </a>
         </li>
