--- a/project-1.html
+++ b/project-1.html
@@ -16,16 +16,18 @@
   <header class="hero-header">
     <ul class="branding-navigation">
       <li><a href="index.html" class="custom-navigation">Work</a></li>
-      <li class="logo"><a href="index.html"><img src="https://assets.codepen.io/316293/tools.svg" /></a></li>
+      <li class="logo"><a href="index.html"><img src="Mia's logolbubu-07.png" /></a></li>
       <li><a href="about.html" class="custom-navigation">About</a></li>
     </ul>
   </header>
   <div class="project-wrapper">
     <aside class="project-aside">
       <div class="project-info">
-        <h1>Project One</h1>
-        <p>This sidebar is sticky using
-          <pre>position: sticky; top: 0;</pre>
+        <h1>The Familiar Unfamiliar</h1>
+        <p>The Familiar Unfamiliar is a fictional music streaming channel available on major platforms. 
+          It showcases unique collaberations between artists from different genres.
+          They play songs you know, but not the way you know them.
+          
         </p>
 
       </div>
@@ -35,7 +37,7 @@
       </ul>
     </aside>
     <main class="project-details">
-      <div class="project-image">⭐️</div>
+      <div class="project-image">help</div>
       <div class="project-image">🌸</div>
       <div class="project-image">🐙</div>
       <div class="project-image">🔥</div>
