--- a/project-1.html
+++ b/project-1.html
@@ -38,10 +38,11 @@
     </aside>
     <main class="project-details">
       <div class="project-image">help</div>
-      <div class="project-image">🌸</div>
-      <div class="project-image">🐙</div>
-      <div class="project-image">🔥</div>
-      <div class="project-image">🥑</div>
+      <div class="project-image"> <img src=fu5.jpg alt="study5"></div>
+      <div class="project-image"> <img src=fu4.jpg alt="study4"></div>
+      <div class="project-image"> <img src=fu3.jpg alt="study3"></div>
+      <div class="project-image"> <img src=fu2.jpg alt="study2"></div>
+      <div class="project-image"> <img src=fu1.jpg alt="study1"></div>
     </main>
 
   </div>
