--- a/project-1.html
+++ b/project-1.html
@@ -37,12 +37,15 @@
       </ul>
     </aside>
     <main class="project-details">
-      <div class="project-image">help</div>
+      <div class="project-image"> <img src=fu9.jpg alt="study9"></div>
       <div class="project-image"> <img src=fu5.jpg alt="study5"></div>
       <div class="project-image"> <img src=fu4.jpg alt="study4"></div>
       <div class="project-image"> <img src=fu3.jpg alt="study3"></div>
       <div class="project-image"> <img src=fu2.jpg alt="study2"></div>
       <div class="project-image"> <img src=fu1.jpg alt="study1"></div>
+      <div class="project-image"> <img src=fu6.jpg alt="study6"></div>
+      <div class="project-image"> <img src=fu7.jpg alt="study7"></div>
+      <div class="project-image"> <img src=fu8.jpg alt="study8"></div>
     </main>
 
   </div>
