--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
     <li class="footer-item-2">
       <h2>Awards &amp; Recognition</h2>
       <ul class="awards-list">
-        <li class="award-item"><a href="#">2020 ADCC Student Competition Finalist in Editorial and Book Design</a></li>
+        <li class="award-item"><a href="#">2020 ADCC Student Competition Finalist </a></li>
         <li class="award-item"><a href="#">2021 Third Place at the HUBBUB #4 showcase</a></li>
-        <li class="award-item"><a href="#">RGD 2022 Student Awards Honourable Mention - Packaging Design (Series)  
+        <li class="award-item"><a href="#">RGD 2022 Student Awards Honourable Mention   
         </a></li>                
       </ul>
     </li>
