--- a/project-1.html
+++ b/project-1.html
@@ -51,20 +51,19 @@
   </div>
   <ul class="global-footer">
     <li class="footer-item-1">
-      <h2>Make it yours + host it for free!</h2>
-      <p>A simple but highly customizable responsive template. It's got a big hero area for your branding and intro. The
-        work page is based on CSS Grid. The project page has a sticky sidebar. Can you find the easter eggs 🥚🥚🥚? Feel
-        free to make this your own by adding your own cusom cursors, <a href="javascript:void(0)"
-          class="toggleGhost colored-link" id="btnGhost value=" Hide Ghost" onclick="ShowHideDiv(this)">making something
-          randomly fly across the screen</a>, playing with animated gradients, animated GIFs, or even super crisp SVGs.
+      <h2>About!</h2>
+      <p>A  Mia, and I am a versatile graphic designer, creative thinker, and illustrator from North Vancouver, 
+        BC whose secret ambition is to combine all my passions into one. I continuously strive to create clever ideas 
+        and designs that make for thoughtful solutions and for people to take something meaningful away, whether that be a 
+        smile or a spur of deep thought. I am also an optimist and will forever watch for and listen to every perspective that comes my way!
       </p>
     </li>
     <li class="footer-item-2">
       <h2>Awards &amp; Recognition</h2>
       <ul class="awards-list">
-        <li class="award-item"><a href="#">Award goes here</a></li>
-        <li class="award-item"><a href="#">Award goes here</a></li>
-        <li class="award-item"><a href="#">Award goes here</a></li>                
+        <li class="award-item"><a href="#">2020 ADCC Student Competition Finalis</a></li>
+        <li class="award-item"><a href="#">2021 Third Place at the HUBBUB #4 showcase</a></li>
+        <li class="award-item"><a href="#">RGD 2022 Student Awards Honourable Mention</a></li>                
       </ul>
     </li>
     <li class="footer-item-3">
