--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </ul>
     </header>
     <div class="hero-headline-wrapper">
-      <h1 class="hero-headline stroke-shadow">Hello, I'm Mia</h1> <figure class="toggleGhost hero-icon" id="btnGhost value="Hide Ghost" onclick="ShowHideDiv(this)" /></figure>
+      <h1 class="hero-headline stroke-shadow">A collection of work by Mia </h1> <figure class="toggleGhost hero-icon" id="btnGhost value="Hide Ghost" onclick="ShowHideDiv(this)" /> Enjoy.</figure>
     </div>
     <footer class="hero-footer">
       <ul class="hero-footer-navigation">
