--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
     <li class="footer-item-3">
       <h2>Contact &amp; Social</h2>
       <ul class="socials-list">
-        <li class="social-item"><a href="#">Insta</a></li>
-        <li class="social-item"><a href="#">LinkedIn</a></li>
-        <li class="social-item"><a href="#">Behance</a></li>                
+        <li class="social-item"><a href="https://www.instagram.com/miacanderanart/?hl=en">Insta</a></li>
+        <li class="social-item"><a href="https://www.linkedin.com/in/miacanderan/">LinkedIn</a></li>
+        <li class="social-item"><a href="https://www.behance.net/miacanderan">Behance</a></li>                
       </ul>
     </li>    
     <li class="footer-item-4">
