--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <footer class="hero-footer">
       <ul class="hero-footer-navigation">
-        <li><a href="#" class="custom-navigation">Instagram</a></li>
+        <li><a href="https://www.instagram.com/miacanderanart/?hl=en" class="custom-navigation">Instagram</a></li>
         <li><a href="mailto:james@magnetude.com" class="custom-navigation">Email</a></li>
       </ul>
     </footer>
